@@ -1,3 +1,7 @@
+2011-10-22 Roman
+- UI.VCAEngine: Remove DB version 1 support.
+
+
 2011-10-21 Roman
 - FIX:UI.VCAEngine: User API function SessWdg::wdgAdd() is fixed for process elements list update.
 - UI.VCAEngine: User's attributes modify to change "name" and "wa" is set to hot change, without full
